--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Personal Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <title>Eduardo Perez's Personal Website</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Link to external stylesheet for cleaner HTML -->
 </head>
+
 <body>
-  <h1>Welcome to My Personal Website</h1>
-  <p>This is where you can showcase your projects and portfolio.</p>
+  <!-- Main content section -->
+  <header>
+    <h1>Welcome to My Personal Website</h1>
+    <p>Showcasing my projects, portfolio, and professional journey.</p>
+  </header>
+
+  <!-- Introduction section -->
+  <section id="intro">
+    <h2>Eduardo Perez</h2>
+    <p>
+      A Solutions Engineer with a background in apps. Ventured into the advertising world, focused on data-driven
+      solutions and measurement.
+    </p>
+    <a href="#general-info" class="button icon solid solo fa-arrow-down">Continue</a>
+  </section>
+
+  <!-- General Information section -->
+  <section id="general-info">
+    <h2>General Information</h2>
+    <div class="grid">
+      <div class="grid-row">
+        <span class="bold">🤵 Name:</span>
+        <span>Eduardo Perez</span>
+      </div>
+      <div class="grid-row">
+        <span class="bold">🎂 Birthdate:</span>
+        <span>December 24</span>
+      </div>
+      <div class="grid-row">
+        <span class="bold">⚒️ Current Role:</span>
+        <span>Technical Account Manager at Branch.io</span>
+      </div>
+      <div class="grid-row">
+        <span class="bold">🏫 Preparing:</span>
+        <span>My first app for the App Store</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>Last updated: 09 September 2024</p>
+  </footer>
+
+  <!-- Navigation Panel -->
+  <nav id="navPanel">
+    <ul class="links">
+      <li class="active"><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="certifications.html">Certifications</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="contact.html">Contact Me</a></li>
+    </ul>
+    <ul class="icons">
+      <li><a href="https://www.linkedin.com/in/eperez94/" class="icon brands fa-linkedin" aria-label="LinkedIn"></a></li>
+    </ul>
+  </nav>
+  
 </body>
+
 </html>
