--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
   <footer>
     <p>Last updated: 09 September 2024</p>
   </footer>
+<!-- Navigation Panel Toggle Button -->
+<button id="navToggle" aria-label="Toggle Navigation" class="nav-toggle">☰</button>
 
-  <!-- Navigation Panel -->
-  <nav id="navPanel">
-    <ul class="links">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="certifications.html">Certifications</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="contact.html">Contact Me</a></li>
-    </ul>
-    <ul class="icons">
-      <li><a href="https://www.linkedin.com/in/eperez94/" class="icon brands fa-linkedin" aria-label="LinkedIn"></a></li>
-    </ul>
-  </nav>
-  
+<!-- Navigation Panel -->
+<nav id="navPanel" class="nav-panel">
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="education.html">Education</a></li>
+    <li><a href="certifications.html">Certifications</a></li>
+    <li><a href="resume.html">Resume</a></li>
+    <li><a href="contact.html">Contact Me</a></li>
+  </ul>
+  <ul class="social-icons">
+    <li><a href="https://www.linkedin.com/in/eperez94/" class="icon fa-linkedin" aria-label="LinkedIn"></a></li>
+  </ul>
+</nav>
 </body>
-
 </html>
