--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>Eduardo Perez's Personal Website</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Link to external stylesheet for cleaner HTML -->
+  
+  <!-- External CSS -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <!-- Main content section -->
-  <header>
+  <!-- Main Header Section -->
+  <header class="main-header">
     <h1>Welcome to My Personal Website</h1>
     <p>Showcasing my projects, portfolio, and professional journey.</p>
   </header>
 
-  <!-- Introduction section -->
-  <section id="intro">
+  <!-- Introduction Section -->
+  <section id="intro" class="intro-section">
     <h2>Eduardo Perez</h2>
     <p>
       A Solutions Engineer with a background in apps. Ventured into the advertising world, focused on data-driven
@@ -25,8 +27,8 @@
     <a href="#general-info" class="button icon solid solo fa-arrow-down">Continue</a>
   </section>
 
-  <!-- General Information section -->
-  <section id="general-info">
+  <!-- General Information Section -->
+  <section id="general-info" class="general-info-section">
     <h2>General Information</h2>
     <div class="grid">
       <div class="grid-row">
@@ -48,26 +50,34 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer>
+  <!-- Footer Section -->
+  <footer class="main-footer">
     <p>Last updated: 09 September 2024</p>
   </footer>
-<!-- Navigation Panel Toggle Button -->
-<button id="navToggle" aria-label="Toggle Navigation" class="nav-toggle">☰</button>
 
-<!-- Navigation Panel -->
-<nav id="navPanel" class="nav-panel">
-  <ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="projects.html">Projects</a></li>
-    <li><a href="education.html">Education</a></li>
-    <li><a href="certifications.html">Certifications</a></li>
-    <li><a href="resume.html">Resume</a></li>
-    <li><a href="contact.html">Contact Me</a></li>
-  </ul>
-  <ul class="social-icons">
-    <li><a href="https://www.linkedin.com/in/eperez94/" class="icon fa-linkedin" aria-label="LinkedIn"></a></li>
-  </ul>
-</nav>
+  <!-- Navigation Toggle Button -->
+  <button id="navToggle" aria-label="Toggle Navigation" class="nav-toggle">☰</button>
+
+  <!-- Navigation Panel -->
+  <nav id="navPanel" class="nav-panel">
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="certifications.html">Certifications</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="contact.html">Contact Me</a></li>
+    </ul>
+    <ul class="social-icons">
+      <li><a href="https://www.linkedin.com/in/eperez94/" class="icon fa-linkedin" aria-label="LinkedIn"></a></li>
+    </ul>
+  </nav>
+
+  <!-- Overlay (For Nav Panel) -->
+  <div id="overlay" class="overlay"></div>
+
+  <!-- External JavaScript -->
+  <script src="script.js"></script>
 </body>
+
 </html>
