--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -160,5 +160,59 @@
     <!-- Submit Button -->
     <button type="submit" class="btn-primary">Complete Purchase</button>
   </div>
+  <section class="OfferCardV2__OfferCardBackground-sc-1uxgtui-0 ineLKm">
+    <div class="OfferCardV2__Container-sc-1uxgtui-1 iuIhsb">
+      <div class="OfferCardV2__AboveCard-sc-1uxgtui-2 iRoEvL">
+        <span class="encore-text encore-text-title-small OfferCardV2__YourPlanLabel-sc-1uxgtui-3 dRqJeR" data-encore-id="text">
+          Your plan
+        </span>
+        <a href="/us/premium/?checkout-offer=recurring_premium_audiobooks-full&amp;ref=checkout#plans" data-encore-id="textLink" class="Link-sc-k8gsk-0 jVkpyL"><span class="encore-text encore-text-body-small OfferCardV2__ChangePlansLinkText-sc-1uxgtui-4 iUSBXZ" data-encore-id="text">
+          Change plan
+        </span>
+        </a>
+      </div>
+      <article class="OfferCardV2__Card-sc-1uxgtui-5 exQOYa">
+        <div class="OfferCardV2__OfferCardHeader-sc-1uxgtui-6 fUTbLQ">
+          <div><h1 class="encore-text encore-text-body-medium-bold OfferCardV2__Title-sc-1uxgtui-8 hcyFaW" data-encore-id="text">
+            Premium Individual
+          </h1>
+            <h3 class="encore-text encore-text-marginal OfferCardV2__SubTitle-sc-1uxgtui-9 jCjyBL" data-encore-id="text">
+              1 Premium account
+            </h3>
+          </div>
+        </div>
+        <div class="OfferCardV2__OfferCardBody-sc-1uxgtui-7 jkOfPd">
+          <div class="OfferCardV2__OfferCardLine-sc-1uxgtui-12 jXHEGh">
+            <p class="encore-text encore-text-body-small-bold OfferCardV2__OfferCardLineContent-sc-1uxgtui-13 iRCRty" data-encore-id="text">
+              Total</p><p class="encore-text encore-text-body-small-bold OfferCardV2__OfferCardLineContent-sc-1uxgtui-13 iRCRty" data-encore-id="text">
+                $11.99 + tax / month
+              </p>
+          </div>
+          <div class="OfferCardV2__OfferCardLine-sc-1uxgtui-12 jXHEGh">
+            <p class="encore-text encore-text-body-small-bold OfferCardV2__OfferCardLineContent-sc-1uxgtui-13 iRCRty" data-encore-id="text">
+              Next Billing Date</p><p class="encore-text encore-text-body-small-bold OfferCardV2__OfferCardLineContent-sc-1uxgtui-13 iRCRty" data-encore-id="text">
+                Nov 30, 2024
+              </p>
+          </div>
+          <ul role="list" class="TypeList__TypeListElement-sc-1jhixr6-0 ljsspJ OfferCardV2__OfferCardList-sc-1uxgtui-15 fPjNSV" data-encore-id="typeList">
+            <li>
+              <p class="encore-text encore-text-marginal OfferCardV2__ListItemContent-sc-1uxgtui-14 cgrpjd" data-encore-id="text">
+                You will next be billed on Nov 30, 2024
+              </p>
+            </li>
+            <li>
+              <p class="encore-text encore-text-marginal OfferCardV2__ListItemContent-sc-1uxgtui-14 cgrpjd" data-encore-id="text">
+                Cancel anytime. 
+                <a href="https://www.spotify.com/legal/paid-subscription-terms/" target="_blank" rel="noopener" data-encore-id="textLink" class="Link-sc-k8gsk-0 jVkpyL">
+                  Offer terms
+                </a> 
+                apply.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </article>
+    </div>
+  </section>
 </body>
 </html>
