--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -98,12 +98,9 @@
 </head>
 <body>
   <div class="container">
-    <h2>Checkout</h2>
+    <h2>Your plan</h2>
     <!-- Offer Plan Section -->
     <section class="section offer-card">
-      <div>
-        <span>Your plan</span>
-      </div>
       <article>
         <h1>Premium Individual</h1>
         <h3>1 Premium account</h3>
@@ -126,13 +123,9 @@
       </article>
     </section>
 
-    <!-- Billing & Shipping Information Section -->
+    <!-- Billing Information Section -->
     <div class="section">
-      <h3>Billing & Shipping Information</h3>
-      <div class="form-group">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" required>
-      </div>
+      <h3>Billing Information</h3>
       <div class="form-group">
         <label for="address">Address</label>
         <input type="text" id="address" name="address" required>
@@ -154,15 +147,11 @@
         <label for="zip">ZIP Code</label>
         <input type="text" id="zip" name="zip" required>
       </div>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" required>
-      </div>
     </div>
 
     <!-- Payment Information Section -->
     <div class="section">
-      <h3>Payment Information</h3>
+      <h3>Payment Information [Drop In Demo Here]</h3>
       <div class="form-group">
         <label for="card-number">Card Number</label>
         <input type="text" id="card-number" name="card-number" required>
