--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -3,98 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Embed the Adyen Web script element above any other JavaScript in your checkout page. -->
+  <script src="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.5.0/adyen.js"
+     integrity="sha384-XS7xTa1zeFadKWQceyCI+If+qgqSpiE2z7fnFJyznti1yloAmaxHFUkf3K8/Av0+"
+     crossorigin="anonymous">
+     </script>
+
+  <!-- Embed the Adyen Web stylesheet. You can add your own styling by overriding the rules in the CSS file -->
+  <link rel="stylesheet"
+     href="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.5.0/adyen.css"
+     integrity="sha384-uufhzWG2RuRQO7+XOvcalWqc1tuu9jdTMeO5nMwXTHB1p/EJuxTwRfhA3Q8aLEGe"
+     crossorigin="anonymous">
+  
   <title>Checkout Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-
-    .container {
-      width: 100%;
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    h2 {
-      color: #333;
-    }
-
-    .form-group {
-      margin-bottom: 15px;
-    }
-
-    .form-group label {
-      display: block;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .form-group input, .form-group select {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .section {
-      margin-bottom: 20px;
-    }
-
-    .cart-summary, .offer-card {
-      background-color: #f9f9f9;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      margin-bottom: 20px;
-    }
-
-    .cart-item {
-      display: flex;
-      justify-content: space-between;
-      padding: 5px 0;
-    }
-
-    .total {
-      font-weight: bold;
-      font-size: 1.2em;
-      text-align: right;
-    }
-
-    .btn-primary {
-      background-color: #28a745;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 4px;
-      font-size: 1em;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    .btn-primary:hover {
-      background-color: #218838;
-    }
-
-    .offer-card h1, .offer-card h3, .offer-card p {
-      margin: 0;
-    }
-
-    .offer-card a {
-      color: #1db954;
-      text-decoration: none;
-    }
-
-    .offer-card a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
@@ -150,7 +73,9 @@
     </div>
 
     <!-- Payment Information Section -->
-    <div class="section">
+    <div id="dropin-container"></div>
+    
+<!--     <div class="section">
       <h3>Payment Information [Drop In Demo Here]</h3>
       <div class="form-group">
         <label for="card-number">Card Number</label>
@@ -164,7 +89,7 @@
         <label for="cvv">CVV</label>
         <input type="text" id="cvv" name="cvv" required>
       </div>
-    </div>
+    </div> -->
 
     <!-- Submit Button -->
     <button type="submit" class="btn-primary">Complete Purchase</button>
