--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -84,7 +84,7 @@
     </div> -->
 
     <!-- Complete Purchase Button -->
-    <button type="button" class="btn-primary" onclick="initializeAdyenCheckout()">Complete Purchase</button>
+    <button onclick="initializeAdyenCheckout()">Complete Purchase</button>
   </div>
 
    <!-- Custom JavaScript -->
