--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adyen Checkout Demo</title>
 
-  <!-- Embed the Adyen Web script element above any other JavaScript in your checkout page. -->
-	<script src="https://checkoutshopper-live.cdn.adyen.com/checkoutshopper/sdk/6.4.0/adyen.js"
-     integrity="sha384-dLpBKhDBlDJFwJRikmtQ9LknN1dEXm6TQwkCgV4IEZn5uspRXkjLwpaiy2bxhdFO"
+<!-- Embed the Adyen Web script element above any other JavaScript in your checkout page. -->
+	<script src="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.5.0/adyen.js"
+     integrity="sha384-XS7xTa1zeFadKWQceyCI+If+qgqSpiE2z7fnFJyznti1yloAmaxHFUkf3K8/Av0+"
      crossorigin="anonymous"></script>
 
-  <!-- Embed the Adyen Web stylesheet. You can add your own styling by overriding the rules in the CSS file -->
+<!-- Embed the Adyen Web stylesheet. You can add your own styling by overriding the rules in the CSS file -->
 	<link rel="stylesheet"
-     href="https://checkoutshopper-live.cdn.adyen.com/checkoutshopper/sdk/6.4.0/adyen.css"
-     integrity="sha384-usSLqgyBadvUs8EgbXytJFWGI49spO8U2XYgplIuF4ktNNNoo77d7CB2mesCVH/U"
+     href="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.5.0/adyen.css"
+     integrity="sha384-uufhzWG2RuRQO7+XOvcalWqc1tuu9jdTMeO5nMwXTHB1p/EJuxTwRfhA3Q8aLEGe"
      crossorigin="anonymous">
   
   <link rel="stylesheet" href="styles.css" />
