--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -67,8 +67,7 @@
     </div>
 
     <!-- Complete Purchase Button -->
-    <button onclick="initializeAdyenCheckout()">Complete Purchase</button>
-
+	  <button onclick="startCheckout()">Complete Purchase</button>
    <!-- Custom JavaScript -->
   <script src="adyenCheckout.js"></script>
 </body>
