--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <!-- Complete Purchase Button -->
-	  <button onclick="startCheckout()">Complete Purchase</button>
+	  <button onclick="initializeAdyenCheckout()">Complete Purchase</button>
    <!-- Custom JavaScript -->
   <script src="adyenCheckout.js"></script>
 </body>
