--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adyen Checkout Demo</title>
 
-<!-- Embed the Adyen Web script element above any other JavaScript in your checkout page. -->
-	<script src="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.5.0/adyen.js"
+  <!-- Embed the Adyen Web script element above any other JavaScript in your checkout page. -->
+  <script src="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.5.0/adyen.js"
      integrity="sha384-XS7xTa1zeFadKWQceyCI+If+qgqSpiE2z7fnFJyznti1yloAmaxHFUkf3K8/Av0+"
      crossorigin="anonymous"></script>
 
-<!-- Embed the Adyen Web stylesheet. You can add your own styling by overriding the rules in the CSS file -->
-	<link rel="stylesheet"
+  <!-- Embed the Adyen Web stylesheet. You can add your own styling by overriding the rules in the CSS file -->
+  <link rel="stylesheet"
      href="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/6.5.0/adyen.css"
      integrity="sha384-uufhzWG2RuRQO7+XOvcalWqc1tuu9jdTMeO5nMwXTHB1p/EJuxTwRfhA3Q8aLEGe"
      crossorigin="anonymous">
@@ -67,8 +67,15 @@
     </div>
 
     <!-- Complete Purchase Button -->
-	  <button onclick="initializeAdyenCheckout()">Complete Purchase</button>
-   <!-- Custom JavaScript -->
-  <script src="adyenCheckout.js"></script>
+    <button>Complete Purchase</button>
+
+    <!-- Custom JavaScript -->
+    <script src="adyenCheckout.js"></script>
+    <script>
+      // Initialize Adyen Checkout as soon as the page loads
+      document.addEventListener('DOMContentLoaded', function() {
+          initializeAdyenCheckout();
+      });
+    </script>
 </body>
 </html>
