--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -70,7 +70,7 @@
     <button>Complete Purchase</button>
 
     <!-- Custom JavaScript -->
-    <script src="adyenCheckout.js"></script>
+    <script src="adyenCheckout.js" defer></script>
     <script>
       // Initialize Adyen Checkout as soon as the page loads
       document.addEventListener('DOMContentLoaded', function() {
