--- a/adyen-drop-in-demo/index.html
+++ b/adyen-drop-in-demo/index.html
@@ -8,6 +8,9 @@
   <!-- Embed Adyen Web stylesheet -->
   <link rel="stylesheet" href="https://checkoutshopper-test.cdn.adyen.com/checkoutshopper/sdk/4.1.0/adyen.css">
   <link rel="stylesheet" href="styles.css">
+  
+  <!-- Override Adyen styles to match Spotify branding -->
+  <link rel="stylesheet" href="override.css">
 </head>
 <body>
   <div class="container">
