--- a/email-response-assistant/index.html
+++ b/email-response-assistant/index.html
@@ -61,7 +61,7 @@
 
   <!-- Context Input -->
   <label for="contextInput">Relevant Context:</label>
-  <input id="contextInput" type="text" placeholder="Add context (e.g., tone, urgency, or specific details)...">
+  <textarea id="contextInput" placeholder="Add context (e.g., tone, urgency, or specific details)..."></textarea>
 
   <button id="generateResponse">Generate Reply</button>
 
