--- a/email-response-assistant/index.html
+++ b/email-response-assistant/index.html
@@ -4,52 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Email Response Helper</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-    }
-
-    textarea {
-      width: 100%;
-      height: 150px;
-      margin-bottom: 20px;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    .output-container {
-      margin-top: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Email Response Helper</h1>
@@ -63,6 +18,7 @@
   <label for="contextInput">Relevant Context:</label>
   <textarea id="contextInput" placeholder="Add context (e.g., tone, urgency, or specific details)..."></textarea>
 
+  <!-- Generate Button -->
   <button id="generateResponse">Generate Reply</button>
 
   <!-- Output Area -->
@@ -71,22 +27,6 @@
     <textarea id="responseOutput" placeholder="Your reply will appear here..." readonly></textarea>
   </div>
 
-  <script>
-    document.getElementById('generateResponse').addEventListener('click', async () => {
-      const emailInput = document.getElementById('emailInput').value;
-      const contextInput = document.getElementById('contextInput').value;
-
-      if (!emailInput) {
-        alert('Please enter the email you received.');
-        return;
-      }
-
-      // Placeholder: Update this to send the data to your Firebase Function
-      document.getElementById('responseOutput').value = 
-        `Generating a response based on your email and context... 
-        (Email: ${emailInput.substring(0, 50)}...) 
-        (Context: ${contextInput || 'None provided'})`;
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
