--- a/email-response-assistant/index.html
+++ b/email-response-assistant/index.html
@@ -27,6 +27,16 @@
     <textarea id="responseOutput" placeholder="Your reply will appear here..." readonly></textarea>
   </div>
 
+  <!-- About Section -->
+  <section id="about">
+    <h2>About</h2>
+    <p>The Email Response Helper was created to assist users in drafting thoughtful and professional replies to emails. Whether you're responding to a difficult message, need help with tone, or just want to save time, this tool generates a well-crafted response based on the provided email and context.</p>
+    
+    <p>By analyzing the input email and any relevant details you add, the tool suggests a response that aligns with the situation, ensuring clarity, professionalism, and efficiency in communication.</p>
+
+    <p>Our goal is to simplify email writing, reduce stress, and help users communicate effectively—whether for work, customer service, or personal conversations.</p>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
